chore: cleanup unused files and deploy core application improvements with modern login and enhanced service details

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "firebase": "^12.9.0"
+    "cors": "^2.8.6",
+    "express": "^5.2.1",
+    "firebase": "^12.9.0",
+    "googleapis": "^171.4.0",
+    "xlsx": "^0.18.5"
   }
 }
